# AniListShare_new

./: .env.example  .gitignore  manage.py  pyproject.toml  pyrightconfig.json  requirements.txt
AniListShare/: settings.py  urls.py
accounts/templates/account/: login.html  signup.html
accounts/templates/mfa/: authenticate.html
animelist/: admin.py  context_processors.py  models.py  urls.py  views.py
animelist/migrations/: 0001_initial.py  0002_rename_mail_id_anime_mal_id.py
animelist/static/animelist/: add_anime_modal.js  anime_table.js  style.css
animelist/templates/animelist/: base.html  index.html
api/: serializers.py  urls.py  views.py
core/: admin.py  middleware.py  models.py  urls.py  views.py
core/migrations/: 0001_initial.py  0002_anime_core_anime_categor_6b0858_idx_and_more.py  0002_rename_mail_id_anime_mal_id.py  0003_remove_anime_comments_remove_anime_mal_id_and_more.py  0004_alter_anime_stars.py  0005_remove_anime_season_season.py  0006_alter_season_anime.py  0007_season_comment.py  0011_category_user_category_id.py
core/static/core/: style.css
core/templates/core/: base.html  index.html  shared_list.html
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  main.jsx
frontend/src/api/: allauth.js  client.js
frontend/src/auth/: AuthContext.jsx  ProtectedRoute.jsx  hooks.js
frontend/src/components/: AddAnimeModal.jsx  AddCategoryModal.jsx  AnimeList.jsx  AnimeModalBase.jsx  CategoryTabs.jsx  EditAnimeModal.jsx  EditCategoryModal.jsx  Header.jsx  ImportModal.jsx  MobileFAB.jsx  ShareModal.jsx  (+5 more)
(+58 files in other folders)
